--- a/indicators/index.html
+++ b/indicators/index.html
@@ -335,6 +335,7 @@
     ((Kijun-Sen > Tenkan-Sen)).</li>
 <li>Weak: Buy if (Tenkan-Sen > Kijun-Sen). Sell on the inverse. Weak is
     more of a standard crossover strategy.</li>
+<li>CloudOnly: <em>Doesn't support persistence.</em> This is designed for quick and early entries and exits when price hits the cloud. A full price crossover across the bottom and top of the cloud will generate two signals.</li>
 <li>Tenkan-sen = (TenkanSenPeriod high + TenkanSenPeriod low)/2))</li>
 <li>Kijun-sen = (KijunSenPeriod high + KijunSenPeriod low)/2))</li>
 <li>Senkou Span A = (Tenkan-sen + Kijun-sen)/2)) ; Plotted
