--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@ contributing support for a new exchange or indicator simple (see
 </ul>
 <h2 id="feature-highlight">Feature Highlight</h2>
 <ul>
-<li>Can utilize a list of multiple indicators to trade off for more
-    secure trade decisions.</li>
+<li>Can utilize a list of multiple indicators to trade off either
+    combined or independently without a need to run separate software
+    instances.</li>
 <li>Separate WebSocket API connections for private and public
     interactions.</li>
 <li>Can resume at next candle.</li>
