--- a/indicators/index.html
+++ b/indicators/index.html
@@ -322,8 +322,8 @@
 </ul>
 <h2 id="ichimoku-ichimoku-cloud">Ichimoku (Ichimoku Cloud)</h2>
 <ul>
-<li>NOTE: Utilizes Ichimoku.IndicatorStrategy for "Strong" or "Weak"
-    strategies.</li>
+<li>NOTE: Utilizes Ichimoku.IndicatorStrategy for Strong, Optimized,
+    Weak, and CloudOnly strategies.</li>
 <li>NOTE: Chikou Span's cool and all, but we don't care. We want to
     trade in real time, and a price list 26 periods behind only confirms
     if we <em>were</em> right or wrong. Because proper Ichimoku cloud relies on
