--- a/donating/index.html
+++ b/donating/index.html
@@ -131,9 +131,9 @@
             <div class="col-md-9" role="main">
 
 <h1 id="donating">Donating</h1>
-<p>Donations are not at all required, or even requested. If you want to
-show a "thank you" and can't contribute code, then feel free to donate.
-BTC: 18XCHsFFpnSWv2GZTbQbXtGTSQGrZABueZ</p>
+<p>This is a free project I work on in free time. If you would like to
+donate, please do so with the following bitcoin address:
+<a href="bitcoin://13Ji7RBgMYr3DHFrLPNtPV2veeBxhcZg1R">13Ji7RBgMYr3DHFrLPNtPV2veeBxhcZg1R</a></p>
 </div>
         </div>
 
