--- a/running/index.html
+++ b/running/index.html
@@ -182,6 +182,14 @@
 </li>
 </ul>
 </li>
+<li>
+<p>xmpp_logging_handler only for XMPP Notifier</p>
+<ul>
+<li>Using pip3:<pre class="prettyprint well"><code>pip3 install xmpp_logging_handler
+</code></pre>
+</li>
+</ul>
+</li>
 </ul>
 </li>
 <li>
