--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="col-md-9" role="main">
 
 <h1 id="avarice">avarice</h1>
-<p>(noun) extreme greed for wealth or material gain.*</p>
+<p><strong>((noun) extreme greed for wealth or material gain.</strong></p>
 <p><em>Greed captures the essence of the evolutionary spirit.</em> -Gordon Gekko</p>
 <hr />
 <h2 id="overview">Overview</h2>
